# Duplicat-Clearner

./: .gitignore  DariaTech-Data-Cleanup.spec  Duplicat-Clearner.spec  README.md  pyproject.toml  requirements.txt  start-linux-mac.sh  start-windows.bat  version_info.txt
.github/workflows/: build-windows.yml  ci.yml
app/: action_log.py  api_action_history.py  api_v1.py  apply_actions.py  asgi.py  audit_log.py  enterprise_store.py  job_runner.py  job_runner_v2.py  launcher.py  main.py  preview_guard.py  progress_scanner.py  revert_service.py  runtime_status.py  scanner.py  server.py  version.py
docs/: ENTERPRISE_PLAN.md  README_TEST.md
installer/: DariaTech-Data-Cleanup.iss  duplicat-cleaner.iss
mobile/: pubspec.yaml
mobile/lib/: api_client.dart  local_scanner.dart  main.dart
scripts/: sign-windows.ps1
tests/: test_api.py  test_consolidate.py  test_job_runner.py  test_progress_scanner.py  test_quarantine.py  test_scanner.py
web/: app.js  enterprise.html  enterprise.js  index.html  styles.css  undo.html  undo.js
